Fixed 'back to top button' being behind card and footer
Changed the z-index

--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -167,6 +167,7 @@
   bottom: 10px;
   transition: right 0.25s;
   cursor: pointer;
+  z-index: 100;
 }
 
 .AnyClassForTransition {
